
* #559: :confval:`html_add_permalinks` is now a string giving the
  text to display in permalinks.

* #553: Added :rst:dir:`testcleanup` blocks in the doctest extension.

* #209: Added :confval:`text_newlines` and :confval:`text_sectionchars`
  config values.

* Added :confval:`man_show_urls` config value.

* #259: HTML table rows now have even/odd CSS classes to enable
  "Zebra styling".

* #367: Added automatic exclusion of hidden members in inheritance
  diagrams, and an option to selectively enable it.

* #306: Added :event:`env-get-outdated` event.

* C++ domain now supports array definitions.


Release 1.0.7 (in development)
==============================

* Fix a bug in the inheritance diagram exception that caused base
  classes to be skipped if one of them is a builtin.

* Fix general index links for C++ domain objects.

* #332: Make admonition boundaries in LaTeX output visible.

* #573: Fix KeyErrors occurring on rebuild after removing a file.

* Fix a traceback when removing files with globbed toctrees.

* If an autodoc object cannot be imported, always re-read the
  document containing the directive on next build.

* If an autodoc object cannot be imported, show the full traceback
  of the import error.

* Fix a bug where the removal of download files and images wasn't
  noticed.

* #571: Implement ``~`` cross-reference prefix for the C domain.

* Fix regression of LaTeX output with the fix of #556.

* #568: Fix lookup of class attribute documentation on descriptors
  so that comment documentation now works.

* Fix traceback with ``only`` directives preceded by targets.

* Fix tracebacks occurring for duplicate C++ domain objects.


Release 1.0.6 (Jan 04, 2011)
============================

* #581: Fix traceback in Python domain for empty cross-reference
  targets.

* #283: Fix literal block display issues on Chrome browsers.

* #383, #148: Support sorting a limited range of accented characters
  in the general index and the glossary.
