@@ -70,6 +70,8 @@ Release 1.1 (in development)
 * #259: HTML table rows now have even/odd CSS classes to enable
   "Zebra styling".
 
+* #478: Added :rst:dir:`py:decorator` directive to describe decorators.
+
 * #367: Added automatic exclusion of hidden members in inheritance
   diagrams, and an option to selectively enable it.
 
